# learn_webgpu_c_1

./: .gitignore  CMakeLists.txt  adapter.c  buffers.c  compile_commands.json  device.c  first_color.c  hello_triangle.c  hello_webgpu.c  helper.c  helper.h  main.c
1_getting_started/: binaries.cmake  first_color.c
2_hello_triangle/: binaries.cmake  hello_triangle.c
3_input_geometry/: binaries.cmake  index_buffer.c  loading_from_file.c  multiple_attributes_a.c  multiple_attributes_b.c  vertex_attribute.c
3_input_geometry/resources/: shader.wsl  webgpu.txt
4_uniforms/: a_first_uniform.c  binaries.cmake  dynamic_uniforms.c  helper_v2.c  more_uniforms.c
5_3d_meshes/: a_simple_example.c  binaries.cmake  depth_buffer.c  helper_v3.c
binaries/: binaries.cmake
